"Se agregaron cambios y se desarrollo el ej_tabla"

--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -12,6 +12,11 @@
     <hl>Diario Online</hl>
 
 </header>
+<nav>
+    <a href="ej_listas.html">
+        Receta epica de alfajores
+    </a>
+</nav>
 <section>    
         <strong>Cordo-Bici</strong>
 
