--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -28,8 +28,7 @@
     </tr>
     </thread>
     <tr>
-        <td colspan="2">CPAR</td>
-        <td>Campus Party</td>
+        <td colspan="2">Campus Party </td>
         <td>Computación/Sistemas</td>
         <td>
             <a href="http://argentina.campus-party.org/">http://argentina.campus-party.org/></a>
