Ejercicios hechos en HTML y CSS

--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -8,7 +8,7 @@
 <!--Agregar la etiqueta semántica para la cabecera. La cabecera debe contener un titulo-->
 <!--Separe la noticia en parrafos-->
 <header>
-    <img src="imagenes/mundito.jpg"width="100"height="100">
+    <img src="imagenes/mundito.jpg"width="100"height="100" alt="Logo del Diario On-line">
     <hl>Diario Online</hl>
 
 </header>
