--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -18,26 +18,73 @@
     https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
 
 <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-Nombre:
-Apellido:
-Sexo: Masculino Femenino
-Edad:
-Email:
-Usuario:
-Password:
-Confirmar Password:
 
-Tipo de servicio: Free / Standard / Premium
-Tema:
-Política
-Negocios
-Tecnología
-Salud
+<form name="formulario_suscripcion">
+    <p>
+        <label for="nombre">Nombre:</label>
+        <input type="text" name="nombre" id="nombre" size="40" placeholder="Nombre" maxlength="40">
+    </p>
+    <p>
+        <label for="apellido">Apellido:</label>
+        <input type="text" name="apellido" id="apellido" size="40" placeholder="Apellido" maxlength="40">
+    </p>
+    <p>
+        Sexo <br>
+        <input type="radio" name="sexo" value="Masculino" id="masculino" size="40"> <label for="sexo"></label>
+        <input type="radio" name="sexo" value="Femenino" id="femenino" size="40"> Femenino</label>
+    </p>
 
-Agregue un comentario:
+    <p>
+        <label for="edad">Edad:</label>
+        <input type="number" name="edad" id="edad" size="40" placeholder="Edad" maxlength="3" min="0" max="200">
+    </p>
+    <p>
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email" size="40" placeholder="Email" maxlength="40">
+    </p>
+    <p>
+        <label for="usuario">Usuario:</label>
+        <input type="text" name="usuario" id="usuario" size="40" placeholder="usuario" maxlength="8">
+    </p>
+    <p>
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password" size="40" placeholder="Password" maxlength="8">
+    </p>
+    <p>
+        <label for="confirmarPassword">Confirmar Password:</label>
+        <input type="password" name="confirmPassword" id="confirmPassword" size="40" placeholder="Password" maxlength="8">
+    </p>
 
-Boton de Enviar
+    <p>
+        Tipo de servicio: 
+            <select name="tipoServicio" id="tipoServicio">
+                <option value="Free">Free</option>
+                <option value="Standard">Standard</option>
+                <option value="Premium">Premium</option>
+            </select>
+    </p>
 
+    <p>
+        Tema:
+        <input type="checkbox" name="politica" id="checkPolitica" size="40"> 
+        <label for="checkPolitica"> Politica </label>
+        <input type="checkbox" name="Negocios" id="checkNegocios" size="40"> 
+        <label for="checkNegocios"> Negocios </label>
+        <input type="checkbox" name="Tecnologia" id="checkTecnologia" size="40"> 
+        <label for="checkTecnologia"> Tecnologia </label>
+        <input type="checkbox" name="Salud" id="checkSalud" size="40"> 
+        <label for="checkSalud"> Salud </label>
+    </p>
+    
+    <p>
+        <label for="comentario"> Agregue un comentario: </label>
+        <textarea name="comentario" id="comentario" rows="5" cols="40" maxlength="300"> Ingrese un comentario </textarea>
+    </p>
+
+    <p>
+        <button type="button">Boton de Enviar</button>
+    </p>
+</form>
 
 </body>
 </html>
