--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -17,16 +17,18 @@
 <body>
 
 <table>
+    <caption> Eventos y congresos</caption>
     <thread>
     <tr>
-        <td>Siglas</td>
-        <td>Congreso o Evento</td>
-        <td>Carrera</td>
-        <td>Web</td>
-        <td>Lugar</td>
-        <td>Fecha</td>
+        <th>Siglas</th>
+        <th>Congreso o Evento</th>
+        <th>Carrera</th>
+        <th>Web</th>
+        <th>Lugar</th>
+        <th>Fecha</th>
     </tr>
     </thread>
+    
     <tr>
         <td colspan="2">Campus Party </td>
         <td>Computación/Sistemas</td>
