--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
     <style>
-        #tituloPrincipal{
-            color: red;
+        a:link, a:visited{
+            color: pink;
         }
-
-        .tituloNoticia{
-            font-size: 30px;
+        a:hover{
+            font-size:1-4em;
+        }
+        a:active{
             font-weight: bold;
-        }
-
-        body{
-            font-family: Arial, Serif;
         }
     </style>
 </head>
