Ejercicios de css (Tamo al dia papi)

--- a/Ejercicios-CSS/ej_leyes.html
+++ b/Ejercicios-CSS/ej_leyes.html
@@ -6,6 +6,7 @@
     <style>
         .titulo li{
             list-style-type: upper-roman;
+            font-size: 2em;
         }
 
         ol.subitems li{
