--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -8,24 +8,34 @@
             color: pink;
         }
         a:hover{
-            font-size:1-4em;
+            font-size: 1.4em;
         }
         a:active{
             font-weight: bold;
         }
+
+        article{
+            column-count: 2;
+            column-gap: 100px;
+            margin: 0px 50px;
+        }
+
+        body{
+            font-family: Arial, Serif;
+        }
     </style>
 </head>
-<body style="font-family: Arial, Serif">
+<body>
 <!--Cree los estilos CSS necesarios para que el texto se visualice en 2 columnas-->
 <header>
-    <h1 id="tituloPrincipal" style="color: red" > Diario On-line</h1>
+    <h1 id="tituloPrincipal" > Diario On-line</h1>
 </header>
 <a href="ej_leyes.html" target="_blank">Legal</a>
 <section>
     <h3 class="tituloNoticia" style="font-size: 30px">CordoBici</h3>
     Publicado el 07/03/2018 en Agropecuarias y Ambiente
     <article>
-        <div>
+        <div class="columna1">
             <p>
                 Un intercambio académico inspiró a Joaquín, Nicolás, Guido y Facundo para elegir el tema de su trabajo final.
                 Dos de ellos estuvieron el año pasado en Sevilla y se quedaron "enamorados" –palabras textuales- de su
